qt/network/gen_qnetworkproxy.nim


proc fcQNetworkProxyQuery_new(): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new".}
proc fcQNetworkProxyQuery_new2(requestUrl: pointer): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new2".}
proc fcQNetworkProxyQuery_new3(hostname: struct_miqt_string, port: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new3".}
proc fcQNetworkProxyQuery_new4(bindPort: cushort): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new4".}
proc fcQNetworkProxyQuery_new5(networkConfiguration: pointer, requestUrl: pointer): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new5".}
proc fcQNetworkProxyQuery_new6(networkConfiguration: pointer, hostname: struct_miqt_string, port: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new6".}
proc fcQNetworkProxyQuery_new7(networkConfiguration: pointer, bindPort: cushort): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new7".}
proc fcQNetworkProxyQuery_new8(other: pointer): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new8".}
proc fcQNetworkProxyQuery_new9(requestUrl: pointer, queryType: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new9".}
proc fcQNetworkProxyQuery_new10(hostname: struct_miqt_string, port: cint, protocolTag: struct_miqt_string): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new10".}
proc fcQNetworkProxyQuery_new11(hostname: struct_miqt_string, port: cint, protocolTag: struct_miqt_string, queryType: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new11".}
proc fcQNetworkProxyQuery_new12(bindPort: cushort, protocolTag: struct_miqt_string): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new12".}
proc fcQNetworkProxyQuery_new13(bindPort: cushort, protocolTag: struct_miqt_string, queryType: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new13".}
proc fcQNetworkProxyQuery_new14(networkConfiguration: pointer, requestUrl: pointer, queryType: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new14".}
proc fcQNetworkProxyQuery_new15(networkConfiguration: pointer, hostname: struct_miqt_string, port: cint, protocolTag: struct_miqt_string): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new15".}
proc fcQNetworkProxyQuery_new16(networkConfiguration: pointer, hostname: struct_miqt_string, port: cint, protocolTag: struct_miqt_string, queryType: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new16".}
proc fcQNetworkProxyQuery_new17(networkConfiguration: pointer, bindPort: cushort, protocolTag: struct_miqt_string): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new17".}
proc fcQNetworkProxyQuery_new18(networkConfiguration: pointer, bindPort: cushort, protocolTag: struct_miqt_string, queryType: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new18".}
proc fcQNetworkProxyQuery_operatorAssign(self: pointer, other: pointer): void {.importc: "QNetworkProxyQuery_operatorAssign".}
proc fcQNetworkProxyQuery_swap(self: pointer, other: pointer): void {.importc: "QNetworkProxyQuery_swap".}
proc fcQNetworkProxyQuery_operatorEqual(self: pointer, other: pointer): bool {.importc: "QNetworkProxyQuery_operatorEqual".}
proc fcQNetworkProxyQuery_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QNetworkProxyQuery_operatorNotEqual".}
proc fcQNetworkProxyQuery_queryType(self: pointer, ): cint {.importc: "QNetworkProxyQuery_queryType".}
proc fcQNetworkProxyQuery_setQueryType(self: pointer, typeVal: cint): void {.importc: "QNetworkProxyQuery_setQueryType".}
proc fcQNetworkProxyQuery_peerPort(self: pointer, ): cint {.importc: "QNetworkProxyQuery_peerPort".}
proc fcQNetworkProxyQuery_setPeerPort(self: pointer, port: cint): void {.importc: "QNetworkProxyQuery_setPeerPort".}
proc fcQNetworkProxyQuery_peerHostName(self: pointer, ): struct_miqt_string {.importc: "QNetworkProxyQuery_peerHostName".}
proc fcQNetworkProxyQuery_setPeerHostName(self: pointer, hostname: struct_miqt_string): void {.importc: "QNetworkProxyQuery_setPeerHostName".}
proc fcQNetworkProxyQuery_localPort(self: pointer, ): cint {.importc: "QNetworkProxyQuery_localPort".}
proc fcQNetworkProxyQuery_setLocalPort(self: pointer, port: cint): void {.importc: "QNetworkProxyQuery_setLocalPort".}
proc fcQNetworkProxyQuery_protocolTag(self: pointer, ): struct_miqt_string {.importc: "QNetworkProxyQuery_protocolTag".}
proc fcQNetworkProxyQuery_setProtocolTag(self: pointer, protocolTag: struct_miqt_string): void {.importc: "QNetworkProxyQuery_setProtocolTag".}
proc fcQNetworkProxyQuery_url(self: pointer, ): pointer {.importc: "QNetworkProxyQuery_url".}
proc fcQNetworkProxyQuery_setUrl(self: pointer, url: pointer): void {.importc: "QNetworkProxyQuery_setUrl".}
proc fcQNetworkProxyQuery_networkConfiguration(self: pointer, ): pointer {.importc: "QNetworkProxyQuery_networkConfiguration".}
proc fcQNetworkProxyQuery_setNetworkConfiguration(self: pointer, networkConfiguration: pointer): void {.importc: "QNetworkProxyQuery_setNetworkConfiguration".}
proc fcQNetworkProxyQuery_staticMetaObject(): pointer {.importc: "QNetworkProxyQuery_staticMetaObject".}
proc fcQNetworkProxyQuery_delete(self: pointer) {.importc: "QNetworkProxyQuery_delete".}
proc fcQNetworkProxy_new(): ptr cQNetworkProxy {.importc: "QNetworkProxy_new".}
proc fcQNetworkProxy_new2(typeVal: cint): ptr cQNetworkProxy {.importc: "QNetworkProxy_new2".}
proc fcQNetworkProxy_new3(other: pointer): ptr cQNetworkProxy {.importc: "QNetworkProxy_new3".}
proc fcQNetworkProxy_new4(typeVal: cint, hostName: struct_miqt_string): ptr cQNetworkProxy {.importc: "QNetworkProxy_new4".}
proc fcQNetworkProxy_new5(typeVal: cint, hostName: struct_miqt_string, port: cushort): ptr cQNetworkProxy {.importc: "QNetworkProxy_new5".}
proc fcQNetworkProxy_new6(typeVal: cint, hostName: struct_miqt_string, port: cushort, user: struct_miqt_string): ptr cQNetworkProxy {.importc: "QNetworkProxy_new6".}
proc fcQNetworkProxy_new7(typeVal: cint, hostName: struct_miqt_string, port: cushort, user: struct_miqt_string, password: struct_miqt_string): ptr cQNetworkProxy {.importc: "QNetworkProxy_new7".}
proc fcQNetworkProxy_operatorAssign(self: pointer, other: pointer): void {.importc: "QNetworkProxy_operatorAssign".}
proc fcQNetworkProxy_swap(self: pointer, other: pointer): void {.importc: "QNetworkProxy_swap".}
proc fcQNetworkProxy_operatorEqual(self: pointer, other: pointer): bool {.importc: "QNetworkProxy_operatorEqual".}
proc fcQNetworkProxy_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QNetworkProxy_operatorNotEqual".}
proc fcQNetworkProxy_setType(self: pointer, typeVal: cint): void {.importc: "QNetworkProxy_setType".}
proc fcQNetworkProxy_typeX(self: pointer, ): cint {.importc: "QNetworkProxy_type".}
proc fcQNetworkProxy_setCapabilities(self: pointer, capab: cint): void {.importc: "QNetworkProxy_setCapabilities".}
proc fcQNetworkProxy_capabilities(self: pointer, ): cint {.importc: "QNetworkProxy_capabilities".}
proc fcQNetworkProxy_isCachingProxy(self: pointer, ): bool {.importc: "QNetworkProxy_isCachingProxy".}
proc fcQNetworkProxy_isTransparentProxy(self: pointer, ): bool {.importc: "QNetworkProxy_isTransparentProxy".}
proc fcQNetworkProxy_setUser(self: pointer, userName: struct_miqt_string): void {.importc: "QNetworkProxy_setUser".}
proc fcQNetworkProxy_user(self: pointer, ): struct_miqt_string {.importc: "QNetworkProxy_user".}
proc fcQNetworkProxy_setPassword(self: pointer, password: struct_miqt_string): void {.importc: "QNetworkProxy_setPassword".}
proc fcQNetworkProxy_password(self: pointer, ): struct_miqt_string {.importc: "QNetworkProxy_password".}
proc fcQNetworkProxy_setHostName(self: pointer, hostName: struct_miqt_string): void {.importc: "QNetworkProxy_setHostName".}
proc fcQNetworkProxy_hostName(self: pointer, ): struct_miqt_string {.importc: "QNetworkProxy_hostName".}
proc fcQNetworkProxy_setPort(self: pointer, port: cushort): void {.importc: "QNetworkProxy_setPort".}
proc fcQNetworkProxy_port(self: pointer, ): cushort {.importc: "QNetworkProxy_port".}
proc fcQNetworkProxy_setApplicationProxy(proxy: pointer): void {.importc: "QNetworkProxy_setApplicationProxy".}
proc fcQNetworkProxy_applicationProxy(): pointer {.importc: "QNetworkProxy_applicationProxy".}
proc fcQNetworkProxy_header(self: pointer, header: cint): pointer {.importc: "QNetworkProxy_header".}
proc fcQNetworkProxy_setHeader(self: pointer, header: cint, value: pointer): void {.importc: "QNetworkProxy_setHeader".}
proc fcQNetworkProxy_hasRawHeader(self: pointer, headerName: struct_miqt_string): bool {.importc: "QNetworkProxy_hasRawHeader".}
proc fcQNetworkProxy_rawHeaderList(self: pointer, ): struct_miqt_array {.importc: "QNetworkProxy_rawHeaderList".}
proc fcQNetworkProxy_rawHeader(self: pointer, headerName: struct_miqt_string): struct_miqt_string {.importc: "QNetworkProxy_rawHeader".}
proc fcQNetworkProxy_setRawHeader(self: pointer, headerName: struct_miqt_string, value: struct_miqt_string): void {.importc: "QNetworkProxy_setRawHeader".}
proc fcQNetworkProxy_delete(self: pointer) {.importc: "QNetworkProxy_delete".}
proc fcQNetworkProxyFactory_new(): ptr cQNetworkProxyFactory {.importc: "QNetworkProxyFactory_new".}
proc fcQNetworkProxyFactory_queryProxy(self: pointer, query: pointer): struct_miqt_array {.importc: "QNetworkProxyFactory_queryProxy".}
proc fcQNetworkProxyFactory_usesSystemConfiguration(): bool {.importc: "QNetworkProxyFactory_usesSystemConfiguration".}
proc fcQNetworkProxyFactory_setUseSystemConfiguration(enable: bool): void {.importc: "QNetworkProxyFactory_setUseSystemConfiguration".}
proc fcQNetworkProxyFactory_setApplicationProxyFactory(factory: pointer): void {.importc: "QNetworkProxyFactory_setApplicationProxyFactory".}
proc fcQNetworkProxyFactory_proxyForQuery(query: pointer): struct_miqt_array {.importc: "QNetworkProxyFactory_proxyForQuery".}
proc fcQNetworkProxyFactory_systemProxyForQuery(): struct_miqt_array {.importc: "QNetworkProxyFactory_systemProxyForQuery".}
proc fcQNetworkProxyFactory_operatorAssign(self: pointer, param1: pointer): void {.importc: "QNetworkProxyFactory_operatorAssign".}
proc fcQNetworkProxyFactory_systemProxyForQuery1(query: pointer): struct_miqt_array {.importc: "QNetworkProxyFactory_systemProxyForQuery1".}
proc fcQNetworkProxyFactory_override_virtual_queryProxy(self: pointer, slot: int) {.importc: "QNetworkProxyFactory_override_virtual_queryProxy".}
proc fcQNetworkProxyFactory_delete(self: pointer) {.importc: "QNetworkProxyFactory_delete".}


func init*(T: type QNetworkProxyQuery, h: ptr cQNetworkProxyQuery): QNetworkProxyQuery =
  T(h: h)
proc create*(T: type QNetworkProxyQuery, ): QNetworkProxyQuery =

  QNetworkProxyQuery.init(fcQNetworkProxyQuery_new())
proc create*(T: type QNetworkProxyQuery, requestUrl: gen_qurl.QUrl): QNetworkProxyQuery =

  QNetworkProxyQuery.init(fcQNetworkProxyQuery_new2(requestUrl.h))
proc create*(T: type QNetworkProxyQuery, hostname: string, port: cint): QNetworkProxyQuery =

  QNetworkProxyQuery.init(fcQNetworkProxyQuery_new3(struct_miqt_string(data: hostname, len: csize_t(len(hostname))), port))
proc create*(T: type QNetworkProxyQuery, bindPort: cushort): QNetworkProxyQuery =

  QNetworkProxyQuery.init(fcQNetworkProxyQuery_new4(bindPort))
proc create*(T: type QNetworkProxyQuery, networkConfiguration: gen_qnetworkconfiguration.QNetworkConfiguration, requestUrl: gen_qurl.QUrl): QNetworkProxyQuery =

  QNetworkProxyQuery.init(fcQNetworkProxyQuery_new5(networkConfiguration.h, requestUrl.h))
proc create*(T: type QNetworkProxyQuery, networkConfiguration: gen_qnetworkconfiguration.QNetworkConfiguration, hostname: string, port: cint): QNetworkProxyQuery =

  QNetworkProxyQuery.init(fcQNetworkProxyQuery_new6(networkConfiguration.h, struct_miqt_string(data: hostname, len: csize_t(len(hostname))), port))
proc create*(T: type QNetworkProxyQuery, networkConfiguration: gen_qnetworkconfiguration.QNetworkConfiguration, bindPort: cushort): QNetworkProxyQuery =
